// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClaimCard component matches the snapshot of a two line claim 1`] = `
<Block
  onTouch={[Function]}
  style={
    Object {
      "alignItems": "flex-start",
      "backgroundColor": "white",
      "flexDirection": "row",
      "justifyContent": "space-between",
      "marginBottom": "1%",
      "paddingVertical": "5%",
    }
  }
>
  <Block
    flex={0.2}
  >
    <NameIcon />
  </Block>
  <Component
    style={
      Object {
        "flex": 0.7,
        "flexGrow": 1,
        "justifyContent": "space-between",
      }
    }
  >
    <ClaimCard
      key="givenName"
      primaryText="Test"
      primaryTextStyle={
        Object {
          "marginBottom": 16,
        }
      }
      secondaryText="Given Name"
    />
    <ClaimCard
      key="familyName"
      primaryText="Running"
      primaryTextStyle={Object {}}
      secondaryText="Family Name"
    />
  </Component>
  <Component
    style={
      Object {
        "flex": 0.1,
      }
    }
  >
    <TouchableOpacity
      activeOpacity={0.2}
      onPress={[Function]}
    >
      <MoreIcon />
    </TouchableOpacity>
  </Component>
</Block>
`;

exports[`ClaimCard component matches the snapshot on render 1`] = `
<Block
  onTouch={[Function]}
  style={
    Object {
      "alignItems": "flex-start",
      "backgroundColor": "white",
      "flexDirection": "row",
      "justifyContent": "space-between",
      "marginBottom": "1%",
      "paddingVertical": "5%",
    }
  }
>
  <Block
    flex={0.2}
  >
    <NameIcon />
  </Block>
  <Component
    style={
      Object {
        "flex": 0.7,
        "flexGrow": 1,
        "justifyContent": "space-between",
      }
    }
  >
    <ClaimCard
      key="familyName"
      primaryText="Running"
      primaryTextStyle={Object {}}
      secondaryText="Family Name"
    />
  </Component>
  <Component
    style={
      Object {
        "flex": 0.1,
      }
    }
  >
    <TouchableOpacity
      activeOpacity={0.2}
      onPress={[Function]}
    >
      <MoreIcon />
    </TouchableOpacity>
  </Component>
</Block>
`;
